--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.24.0",
+    "react-spinners": "^0.13.8",
     "sweetalert2": "^11.12.0"
   },
   "devDependencies": {
