--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "format-code": "prettier --write src/"
+    "format-code": "prettier --write src/",
+    "prod": "vite --mode prod"
   },
   "dependencies": {
     "axios": "^1.7.2",
