--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "prod": "vite --mode prod"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.24.0",
     "react-spinners": "^0.13.8",
     "sweetalert2": "^11.12.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
