--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "prod": "vite --mode prod"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.24.0",
