--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.24.0",
     "react-spinners": "^0.13.8",
-    "sweetalert2": "^11.12.0"
+    "sweetalert2": "^11.12.0",
+    "tailwindcss-animated": "^1.1.2"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
