--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
