--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
-    "jsonwebtoken": "^9.0.2",
-    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -30,8 +28,7 @@
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.24.0",
     "react-spinners": "^0.13.8",
-    "sweetalert2": "^11.12.0",
-    "tailwindcss-animated": "^1.1.2"
+    "sweetalert2": "^11.12.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
