--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
     "moment": "^2.30.1",
+    "rc-pagination": "^4.2.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
@@ -41,6 +42,7 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "less": "^4.2.0",
     "postcss": "^8.4.38",
     "prettier": "3.3.2",
     "tailwindcss": "^3.4.4",
